# DateDimension

./: .gitignore  .pdm-python  LOG.org  Pipfile  README.md  README.org  TODO.org  alembic.ini  columns  dim_date.sql  dim_date_create.py  main.py  models.py  models_dim_date.py  pyproject.toml  sqitch.conf  sqitch_cmds.txt
Scripts/: dim_date_2.sql  dim_date_3.sql  dim_date_4.sql  dim_date_5.sql
alembic/: env.py
mysql/: sqitch.plan
pg/: sqitch.plan
pg/deploy/: app_schema.sql  dim_date.sql
pg/revert/: app_schema.sql  dim_date.sql
pg/verify/: app_schema.sql  dim_date.sql
schemas/development/: 2022_12_10_1204-ec3916939776_initial_build.py
schemas/testing/: 2022_12_10_1218-29f9dfdbf5e3_initial_build.py
src/datedimension/: dim_date_1.sql  week_ids.py
