[project]
name = "DateDimension"
version = "0.1.0"
description = "Date Dimension"
authors = [
    {name = "Patrick Allan", email = "patrick29501@gmx.com"},
]
dependencies = ["environs>=11.2.0", "sqlalchemy>=2.0.36", "psycopg>=3.2.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
