[project]
name = "DateDimension"
version = "0.1.0"
description = "Date Dimension Table"
authors = [
    {name = "Patrick Allan", email = "patrick29501@gmx.com"},
]
dependencies = [
    "environs>=11.2.0",
    "sqlalchemy>=2.0.36",
    "psycopg>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "pendulum>=3.0.0",
    "pandas>=2.2.3",
    "jsons>=1.6.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
